fixed the reviews on mobile screen
I am starting small first so I only adjusted for the mobile screen, no
screenlisteners yet.
What I did: adding to the review divs so we have a nice flexbox so the
alignment of the name, date, rate, and comment is as in the mock up.
Size difference and background still have to be done.

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,8 @@ nav {
   width: 100%;
   height: 80px;
   background-color: #252831;
-  text-align:center;
+  display: flex;
+  align-items: center;
 }
 nav h1 {
   margin: auto;
